2014-06-27  Joseph Myers  <joseph@codesourcery.com>

	* Makeconfig ($(common-objpfx)soversions.mk): Do not generate
	abi-name definition.
	* scripts/soversions.awk: Do not handle or generate ABI lines.
	* shlib-versions: Remove ABI entries.
	* sysdeps/powerpc/nofpu/shlib-versions: Remove file.
	* sysdeps/x86_64/x32/shlib-versions: Remove ABI entry.

2014-06-27  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/mips/mips32/nptl/c++-types.data: Moved ...
	* sysdeps/unix/sysv/linux/mips/mips32/c++-types.data: ... here.
	* sysdeps/unix/sysv/linux/mips/mips32/fpu/nptl/libc.abilist: Moved ...
	* sysdeps/unix/sysv/linux/mips/mips32/fpu/libc.abilist: ... here.
	* sysdeps/unix/sysv/linux/mips/mips32/nptl/ld.abilist: Moved ...
	* sysdeps/unix/sysv/linux/mips/mips32/ld.abilist: ... here.
	* sysdeps/unix/sysv/linux/mips/mips32/nptl/libBrokenLocale.abilist:
	Moved ...
	* sysdeps/unix/sysv/linux/mips/mips32/libBrokenLocale.abilist:
	... here.
	* sysdeps/unix/sysv/linux/mips/mips32/nptl/libanl.abilist: Moved ...
	* sysdeps/unix/sysv/linux/mips/mips32/libanl.abilist: ... here.
	* sysdeps/unix/sysv/linux/mips/mips32/nptl/libcidn.abilist: Moved ...
	* sysdeps/unix/sysv/linux/mips/mips32/libcidn.abilist: ... here.
	* sysdeps/unix/sysv/linux/mips/mips32/nptl/libcrypt.abilist: Moved ...
	* sysdeps/unix/sysv/linux/mips/mips32/libcrypt.abilist: ... here.
	* sysdeps/unix/sysv/linux/mips/mips32/nptl/libdl.abilist: Moved ...
	* sysdeps/unix/sysv/linux/mips/mips32/libdl.abilist: ... here.
	* sysdeps/unix/sysv/linux/mips/mips32/nptl/libm.abilist: Moved ...
	* sysdeps/unix/sysv/linux/mips/mips32/libm.abilist: ... here.
	* sysdeps/unix/sysv/linux/mips/mips32/nptl/libnsl.abilist: Moved ...
	* sysdeps/unix/sysv/linux/mips/mips32/libnsl.abilist: ... here.
	* sysdeps/unix/sysv/linux/mips/mips32/nptl/libnss_compat.abilist:
	Moved ...
	* sysdeps/unix/sysv/linux/mips/mips32/libnss_compat.abilist: ... here.
	* sysdeps/unix/sysv/linux/mips/mips32/nptl/libnss_db.abilist: Moved ...