@@ -1,3 +1,10 @@
+2014-06-27  Roland McGrath  <roland@hack.frob.com>
+
+	* sysdeps/arm/nptl/tls.h: Rename the multiple inclusion guard
+	from _TLS_H to _ARM_NPTL_TLS_H.
+	(TLS_INIT_TP): Move macro, and #include of <sysdep.h>, to ...
+	* sysdeps/unix/sysv/linux/arm/tls.h: ... this new file.
+
 2014-06-27  Joseph Myers  <joseph@codesourcery.com>
 
 	* Makeconfig ($(common-objpfx)soversions.mk): Do not generate
